# nailed-it

./: .env.example  .gitignore  .gitmodules  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  README.md  hs-api.sh  hs_api.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  qwen35-08b-8k.modelfile  skill_compaction_opencode.md  skill_first_summary.md  skills-lock.json  tsconfig.json
.pi/agent/: models.json  settings.json
.pi/agent/extensions/: grep.ts  web-fetch.ts  web-search.ts
assets/config/opencode/: opencode.jsonc
assets/hermes/hindsight/: config.json
assets/pi/agent/: models.json  settings.json
notes/: discord-bot.md  hermes-pi-rpc-integration.md  hindsight-ensure-ascii-bug.md  hindsight-integration.md  pi-skill-filtering.md  sts.md
patches/: @mariozechner__pi-coding-agent.patch
python-packages/dev-cli/: pyproject.toml
python-packages/dev-cli/src/dev_cli/: cli.py  common.py
python-packages/dev-cli/src/dev_cli/commands/: models_dev.py
python-packages/dev-cli/src/dev_cli/commands/setup/: command.py  git_submodules.py  global_skills.py  hermes_config.py  opencode_config.py  pg_config.py  pi_config.py
python-packages/nailed-it-hermes/: pyproject.toml
python-packages/nailed-it-hermes/src/nailed_it_hermes/: __init__.py  plugin.yaml
scripts/: install.ts  postinstall.ts  setup-pi.ts  setup.ts  test_retain_models.py
skills-src/agent-skills-dev/references/: SPEC_SUMMARY.md
skills-src/agent-skills-python-dev/: SKILL.md
skills-src/agent-skills-review/: SKILL.md
skills-src/agent-skills-review/scripts/: review.py
skills-src/agent-skills-typescript-dev/: tsconfig.json
skills-src/agent-skills-typescript-dev/assets/: .oxfmtrc.jsonc
skills-src/memory/: SKILL.md
skills-src/tavily/: SKILL.md
skills-src/tavily/scripts/: tavily.py
skills-src/web-fetch/: SKILL.md
skills/agent-skills-review/references/: REVIEW_CHECKLIST.md
skills/agent-skills-typescript-dev/: SKILL.md  package.json
skills/agent-skills-typescript-dev/assets/: .oxlintrc.json  tsconfig.strict.json
skills/agent-skills-typescript-dev/scripts/: check.ts
skills/web-search/: SKILL.md
