[project]
name = "nailed-it"
version = "0.0.0"
description = "Harry's personal AI assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hindsight-api-slim>=0.5.3",
    "sentence-transformers>=5.4.1",
]

[tool.uv.sources]
hindsight-api-slim = { path = "external/hindsight/hindsight-api-slim", editable = true }
