[project]
name = "nailed-it"
version = "0.0.0"
description = "I nailed it. My AI environment."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["hindsight-api-slim>=0.5.3", "sentence-transformers>=5.4.1"]

[dependency-groups]
dev = ["pyright>=1.1.409", "ruff>=0.15.12"]

[tool.uv.workspace]
members = ["python-packages/*"]

[tool.uv.sources]
hindsight-api-slim = { path = "external/hindsight/hindsight-api-slim", editable = true }

[tool.ruff]
include = [
    "pyproject.toml",
    "python-packages/**/*.py",
    "python-packages/**/pyproject.toml",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D",
    "INP001",
    "PLW1510",
    "S310",
    "S602",
    "S603",
    "S607",
    "T201",
]

[tool.pyright]
include = ["python-packages"]
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportMissingModuleSource = "error"
reportCallInDefaultInitializer = "error"
reportMissingTypeStubs = "none"
reportImplicitOverride = "error"
reportImportCycles = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnreachable = "error"
